src/App.css
/* ... */
.editnote-popup {
  position: relative;
  background-color: rgb(27, 27, 27);
  padding: 0px;
  border-radius: 8px;
  width: 40%;
  padding-top: 2px;
  height: 40%;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.editnote-popup h2 {
  border-bottom: 1px solid #2c2c2c;
  padding-bottom: 5px;
  margin-bottom: 6px;
}

.editnote-popup-content {
  width: 250px;
  justify-self: center;
  margin-top: 20px;
}

.editnote-input {
  background-color: #333333;
  border: none;
  padding: 10px;
  color: white;
}

.editnote-titleinput {
  margin-top: 5px;
}

.noteColor-editcontainer {
  display: flex;
  gap: 10px;
  align-items: center;
  margin-top: 5px;
}

.note-item-active {
  background-color: #3a3a3a !important
}

.menu-bar>button {
  background: none;
  border: none;
  color: white;
  font-size: 15px;
  cursor: pointer;
  height: 100%;
  width: 65px;
}

.menu-bar button:hover {
  background: #1f1f1f;
}

/* 🔹 Main Content Layout */
.content {
  display: flex;
  /* height: calc(100vh - 50px); Takes full height minus the menu bar */
  height: 100vh;
  padding-top: 26px; /* Leaves space for the menu bar */
  width: 100%; /* Ensure it spans the entire width */
  justify-content: flex-start; /* Align children to the left */
  align-items: stretch; /* Stretch children to full height */
}

/* 🔹 Sidebar: Note List */
.note-list {
  width: 300px; /* Fixed width for note list */
  /* background: #2c2c2c; */
  background-color: #222222;
  border-right: 1px solid #393939;
  /* padding: 10px; */
  /* height: 100%; Full height */
  height: calc(100% - 26px);
  user-select: none;
}

.note-list-topbutton {
  padding: 10px;
  font-size: 16px;
  cursor: pointer;
  background: #2e2e2e;
  color: white;
  border: none;
  line-height: 1;
}

.note-list-topbutton svg {
  margin-right: 5px;
}

.note-list-topbar {
  /* margin-top: 10px; */
  display: grid;
  grid-template-columns: 50% 50%;
  border-bottom: 2px solid #4e4e4e;
}

.note-list-topbutton:hover {
  background: #373737;
}

.note-item {
  display: grid;
  justify-content: space-between;
  align-items: center;
  background: #2e2e2e;
  /* border-radius: 5px; */
  margin-bottom: 5px;
  cursor: pointer;
  padding: 0px 0px 0px 10px;
  grid-template-columns: 8% 92%;
  text-align: left;
  height: 32px;
}

.note-item:hover {
  background: #434343;
}

.note-item-button {
  background: none;
  border: none;
  cursor: pointer;
  font-size: 15px;
  color: lightgray;
  margin-bottom: 0;
  margin-top: 0;
}

.note-item-button-delete:hover {
  color: rgb(232, 197, 197);
}

.note-item-button-edit:hover {
  color: rgb(255, 253, 220);
}

.note-item span {
  /* margin-left: 25px; */
  line-height: 1;
  text-overflow: ellipsis;
  max-width: 100%;
  overflow-x: clip;
  text-wrap-mode: nowrap;
}

/* 🔹 Note Editor */
.editor {
  flex-grow: 1; /* Take remaining space */
  /* padding: 5px 5px 0px 5px; */
  display: flex;
  flex-direction: column;
  /* height: 100%; Ensure it stretches fully */
  height: calc(100% - 26px);
}

.editor input {
  font-size: 15px;
  font-weight: bold;
  margin-bottom: 10px;
  padding: 8px;
  color: white;
  border: 2px solid #4b4b4b;
  /* border-radius: 5px; */
  background: #222222;
}

.editor textarea {
  flex-grow: 1;
  font-size: 16px;
  padding: 10px;
  color: white;
  border: none;
  /* border-radius: 5px; */
  resize: none;
  background: #1d1d1d;
}

.editor textarea:focus {
  border: none;
  outline: none;
}

.editor-icon {
  width: 250px;
  -webkit-user-drag: none;
}

.editor-empty {
  align-items: center;
  justify-content: center;
  user-select: none;
}

.editor-empty-title {
  font-size: 22px;
  color: #b3b3b3;
}

.editor-empty-text {
  font-size: 17px;
  color: #b3b3b3;
  margin-top: 10px;
}

.note-list-tabs {
  display: grid;
  grid-template-columns: 50% 50%;
}

.note-list-tab {
  background-color: #171717;
  padding: 6px;
}

.note-list-tab:hover {
  background-color: #222222;
}

.note-list-tab-active {
  border-bottom: 2px solid #6a6a6a;
  color: white;
}

.note-list-tab:not(.note-list-tab-active) {
  border-bottom: 2px solid #484848;
  color: #c3c3c3;
}

.note-list-notes {
  margin-top: 9px;
  overflow-y: auto;
  height: calc(100vh - 150px);
}

/* width */
::-webkit-scrollbar {
  width: 5px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #4a4a4a; 
}
 
/* Handle */
::-webkit-scrollbar-thumb {
  background: #333333; 
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #444; 
}

.note-list-notes-active {
  display: block;
}

.note-list-notes-inactive {
  display: none;
}

.settings-close-btn {
  float: left;
  /* margin-left: 12px; */
  background-color: #2d2d2d;
  height: 100%;
  font-size: 15px;
  padding: 0px 15px;
  border-radius: 0px 0px 0px 6px;
  border: none;
  color: white;
}

.settings-save-btn {
  float: right;
  /* margin-left: 12px; */
  background-color: #2d2d2d;
  height: 100%;
  font-size: 15px;
  padding: 0px 15px;
  border-radius: 0px 0px 6px 0px;
  border: none;
  color: white;
}

.settings-close-btn:hover {
  background: #1f1f1f;
}

.settings-save-btn:hover {
  background: #1f1f1f;
}

.settings-bottom-bar {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  border-top: 1px solid #2c2c2c;
  height: 30px;
}

.settings-main {
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: 25% 75%;
}

.settings-list {
  height: calc(100% - 30px);
  border-right: 1px solid #2c2c2c;
}

.settings-list>ul li {
  background-color: #131313;
  border-bottom: 1px solid #323232;
  list-style-type: none;
  padding: 15px 0px;
  cursor: pointer;
}

.settings-list>ul {
  margin-top: 10px;
  border-top: 1px solid #2c2c2c;
}

.settings-content {
  height: calc(100% - 30px);
  text-align: left;
  padding: 25px;
}

.bottom-bar {
  height: 23px;
  width: 100%;
  position: absolute;
  bottom: 0;
  border-top: 1px solid #414141;
  user-select: none;
}
/* ... */

